style.css
/* This is the style for my index.html */
* {
    padding: 0;
    margin: 0;
}

img{
    max-width: 100%;
    margin: auto;
}

body {
    background-color: #f4f4f4;
    color:#555;
    font-size: 16;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    line-height: 1.6em;
    margin: 0;
}

.container {
    width: 80%;
    margin:auto;
    overflow:hidden;
}

#main-header {
    background-color: rgb(97, 245, 195);
    color: rgb(98, 139, 194);
    padding-top: 40px;
    padding-bottom:40px;
}

#Navigation {
    background-color: darkgrey;
    color: white;
    margin: auto;
}

#Navigation ul {
    padding:0;
    list-style: none;
}

#Navigation li {
    display: inline;
}

#Navigation a {
    color: white;
    text-decoration: none;
    font-size: 22px;
    padding-right: 15px;
}

a:hover {
    color: rgb(97, 245, 195);
}

#showcase {
    background-image: url('../WhoAmI-repository/images/showcase.jpg');
    background-position: center right;
    min-height: 300px;
    margin-bottom: 30px;
    text-align: center;
}

#showcase h1 {
    font-family: 'Lucida Sans';
    font-size: 40px;
    color: rgb(98, 139, 194);
    line-height: 3em;
    padding-top: 30px;
    margin-top: 60px;
}

#main {
   float: left;
   width: 65%;
   padding:20px 0px 20px 0px;
   box-sizing: border-box;
   font-size: 20px;
   color: rgb(98, 139, 194);
}

h1, h2 {
    color: rgb(98, 139, 194);
    margin-bottom: 20px;
}

 p{
   
    color: rgb(98, 139, 194);
    margin-bottom: 20px;
    line-height:1.6;
 }
#sidebar {
    float: right;
    width: 30%;
    margin-left:20px;
    background: darkgrey;
    color: #f4f4f4;
    padding:20px;
    box-sizing: border-box; 
    margin-top: 200px;
 }

 #main-footer{
    background: darkgrey;
    color: white;
    text-align: right;
    padding: 15px;
    margin-top: 30px;
    font-size: 16px;
 }

 .mydream #main{
    width: 100%;
    float:none
 }
.boxes{
    display: flex;
    width: 100%;
    justify-content: space-between;
}

 .box {
    
    flex:1;
    color: #fff;
    padding: 15px 20px;
   

  }
  .box .title{
    width: 100%;
    height:95px;
    display: flex;
    justify-content: center;
    align-items: flex-start;
  }
  .box h2{
    font-size: 25px;
    line-height: 1.2;
    margin:0;
  }

  .box img{
    max-height: 150px;
    margin:auto;
    object-fit: contain;
  }
 @media(max-width:600px){
    #main{
      clear:both;
      width: 100%;
        float:none;
    }

    #sidebar{
        width: 100%;
        float:none;
        clear:both;
        margin-left:0;
    }
 }

 /* This is the style for my myjoy.html */
 .header {
    background-color:lightgrey;
    color: rgb(98, 139, 194);
    min-height: 400px;
 }

.header h1 {
    font-size: 2.1rem;
    font-weight: bold;
    line-height: 1.2;
}

.header p {
    font-size: 1em;
    line-height: 1.4;
    margin: 10px;
    text-align: left;
    padding-left: 150px;
    padding-top: 50px;
}

.header img {
   flex-wrap: wrap;
}

.header .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}
@media (max-width: 768px) {
    .header .container {
      flex-direction: column;
      padding-top: 20px;
      text-align: center;
    }

    .boxes{
        display: block;
    }

/* This is the style for my mydream.html */


  

}

